--- a/payload/vbucks/css/style.css
+++ b/payload/vbucks/css/style.css
@@ -1,6 +1,6 @@
 @font-face{
-    font-family:fortnite;
-    src:url("fortnite.ttf") format('ttf');
+    font-family: fortnite;
+    src: url("LuckiestGuy.ttf") format('ttf');
 }
 
 
