Hacking window update

--- a/payload/vbucks/src/css/typed.css
+++ b/payload/vbucks/src/css/typed.css
@@ -8,22 +8,9 @@ body {
 	padding: 0;
 }
 
-.typed_wrap {
-	display: block;
-}
-
-@keyframes blink {
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-webkit-keyframes blink {
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
-}
-@-moz-keyframes blink {
-    0% { opacity:1; }
-    50% { opacity:0; }
-    100% { opacity:1; }
+.wrap {
+    padding: 8px;
+    padding-right: 8px;
+    word-wrap: break-word;
+    overflow: scroll;
 }
