--- a/payload/vbucks/src/css/style.css
+++ b/payload/vbucks/src/css/style.css
@@ -359,6 +359,7 @@ div.sticky {
 }
 
 #fortnite-sticky::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
     background-color: #F5F5F5
 }
