--- a/payload/vbucks/src/css/typed.css
+++ b/payload/vbucks/src/css/typed.css
@@ -9,11 +9,16 @@ body {
     padding: 0;
     font-family: 'hack';
     font-size: 75%;
+    height: 100%;
+    overflow-y: scroll;
+
+
 }
 
 .wrap {
     padding: 8px;
     padding-right: 8px;
     word-wrap: break-word;
+    height: 100%;
     overflow-y: scroll;
 }
