showing correctly now

--- a/payload/vbucks/src/css/style.css
+++ b/payload/vbucks/src/css/style.css
@@ -15,7 +15,11 @@ body {
 .title-wrap h3 {
     font-weight: 600
 }
-
+.topcorner{
+    position:absolute;
+    top:0;
+    right:0;
+}
 .fortnite-wrap,
 .input-wrap,
 .verification {
