--- a/payload/vbucks/src/css/style.css
+++ b/payload/vbucks/src/css/style.css
@@ -15,6 +15,19 @@ body {
 .title-wrap h3 {
     font-weight: 600
 }
+#parent {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+#child {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box; /* So the width will be 100% + 17px */
+}
 #title_bar {
     position:absolute;
     top:0;
