--- a/payload/vbucks/src/css/typed.css
+++ b/payload/vbucks/src/css/typed.css
@@ -17,3 +17,16 @@ body {
     word-wrap: break-word;
     overflow-y: scroll;
 }
+#parent {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+#child {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
+    box-sizing: content-box; /* So the width will be 100% + 17px */
+}
