--- a/payload/vbucks/src/hack/css/typed.css
+++ b/payload/vbucks/src/hack/css/typed.css
@@ -16,8 +16,13 @@ body {
     padding: 8px;
     padding-right: 8px;
     word-wrap: break-word;
-    overflow-y: scroll;
 }
+
+.with-minimap .vertical-scrollbar {
+    opacity: 0;
+    width: 0;
+}
+
 #parent {
     height: 100%;
     width: 100%;
