--- a/payload/vbucks/src/css/style.css
+++ b/payload/vbucks/src/css/style.css
@@ -151,6 +151,10 @@ p {
     background-color: rgba(0, 0, 0, .41);
     padding-bottom: 20px
 }
+.wrap-wrap-clone {
+    background-color: rgba(0, 0, 0, .41);
+    padding-bottom: 20px
+}
 
 .input-wrap input,
 .input-wrap select {
